# lsy_drone_racing

./: .gitignore  .gitmodules  Progress Presentation Template SS26.pptx  README.md  progress_presentation_ss26.pptx  properdocs.yml  pyproject.toml
.github/workflows/: competition.yml  docs.yml  kaggle.yml  ruff.yml  testing.yml
artifacts/level3_Curriculum_Xobstacle_eval_20260625/: README.md
artifacts/level3_Curriculum_Xobstacle_speedlimit2_eval_20260626/: README.md
config/: final.toml  level1.toml  level2.toml  level2_dr.toml  level3.toml  level3_no_obstacles.toml  multi_level0.toml  multi_level2.toml
deploy_rosbag/: rosbag_commands.txt
deploy_rosbag/bags/real_20260624_132113_level2_latencyobs_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_132440_level2_latencyobs_onemoretime_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_132654_level2_latencyobs_onemoretime_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_132747_level2_latencyobs_onemoretime_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_132849_level2_latencyobs_onemoretime_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_133000_level2_latencyobs_onemoretime_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_133128_level2_latencyobs_onemoretime_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_133324_level2_noDR_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_133524_level2_noDR_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_133603_level2_noDR_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_133723_level2_noDR_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_133814_level2_noDR_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_133854_level2_noDR_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_134000_level2_halfDR_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_134239_level2_halfDR_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_134322_level2_halfDR_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_134433_level2_halfDR_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_134519_level2_halfDR_cf52/: metadata.yaml  real_20260624_134519_level2_halfDR_cf52_0.mcap
deploy_rosbag/bags/real_20260624_134635_level2_fast2_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_134718_level2_fast2_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_134953_level2_fast2_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_135043_level2_fast2_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_135145_level2_fast2_cf52/: metadata.yaml
deploy_rosbag/bags/real_20260624_135327_level2_fast2_cf52/: metadata.yaml
docs/: index.md  jax_ppo_migration.md
docs/challenge/: deployment.md  online_competition.md  overview.md  simulation.md
docs/control/: attitude_controller.md  attitude_mpc.md  controller.md  index.md  state_controller.md
docs/envs/: drone_race.md  index.md  real_drone_race.md
docs/getting_started/: general.md  setup.md
docs/stylesheets/: extra.css
docs/utils/: checks.md  index.md  utils.md
lsy_drone_racing/control/: SimpleInterpolate_controller.py  __init__.py  attitude_controller.py  attitude_controller_multi.py  attitude_mpc.py  attitude_mpc_multi.py  attitude_rl.py  bad_trajectory_planner.py  controller.py  jax_ppo.py  jax_ppo_fast.py  jax_ppo_fast_full_dr.py  level2_v1.0.py  level2_v1.1.py  level2_v2.0.py  level2_v2.1.py  mpcc_drag.py  mpcc_rotor_level2_final.py  mpcc_rpy.py  my_mpc.py  my_pid_cotroller.py  my_rl_controller.py  new_interpolate.py  path_visulization.py  ppo_level2_inference.py  ppo_level2_notebook.ckpt  ppo_level2_notebook_gatepass.ckpt  ppo_level2_notebook_gatepass1.ckpt  ppo_level2_notebook_gatepass1024.ckpt  ppo_level2_observation.py  ppo_level3_inference.py  ppo_level3_observation.py  test.ipynb  train_CleanRL_ppo.py  train_CleanRL_ppo_level3.py  train_CleanRL_ppo_level3_new.py  train_jax_ppo_level3.py  train_rl.py  v2.0.py  v2.1.py  (+5 more)
lsy_drone_racing/envs/: multi_drone_race.py  race_core.py  randomize.py  real_race_env.py  utils.py
lsy_drone_racing/rl_training/: __init__.py  ppo_racing.py  sim_show_contacts.py
lsy_drone_racing/rl_training/checkpoints/: lv2_fast_policy.ckpt  lv2_safe_fast_policy.ckpt  lv3_eval_470m_acc_67_t_3900ms_valid.ckpt  ppo_racing.ckpt
lsy_drone_racing/rl_training/sweep_file/: sweep.yaml  sweep_seeds.yaml  (+4 more)
lsy_drone_racing/utils/: crazyflie.py
notebooks/: finetune_level2_ppo.ipynb  finetune_level3_ppo.ipynb  psudo_code_ppo.py  train_level2_jax_ppo_full_dr.ipynb  train_level2_ppo.ipynb  train_level3_jax_ppo.ipynb  train_level3_jax_ppo_full_dr.ipynb  train_level3_ppo.ipynb
rrt_algorithms/rrt/: rrt_base.py
scripts/: analyze_level2_ppo_crashes.py  build_progress_presentation.py  compare_level2_ppo_checkpoints.py  compare_level3_ppo_checkpoints.py  compare_level3_ppo_checkpoints_fast.py  evaluate_level2_selected_ppo.py  multi_sim.py  nominal_frame_publisher.py  train_jax_ppo_fast_full_dr_level2.py  train_jax_ppo_fast_full_dr_level3.py  train_jax_ppo_fast_level2.py  train_jax_ppo_fast_level3.py  train_jax_ppo_level2.py  train_jax_ppo_level3.py  validate_level2_jax_ppo.py  validate_level2_jax_ppo_fast.py  validate_level2_jax_ppo_fast_full_dr.py
tests/deploy/: test_deployment.py
tools/: setup_mocap.sh
wandb/: latest-run
wandb/offline-run-20260519_223144-w4nawjb3/: run-w4nawjb3.wandb
wandb/run-20260519_222029-yyvz66nl/: run-yyvz66nl.wandb
wandb/run-20260519_223540-u84shqyi/: run-u84shqyi.wandb
wandb/run-20260519_225127-estcygku/: run-estcygku.wandb
(+754 files in other folders)
